fans screen update

--- a/WingMate_iOS/Utilities/privacyPolicy.html
+++ b/WingMate_iOS/Utilities/privacyPolicy.html
@@ -9,8 +9,8 @@
                 padding: 15px 15px;
             }
             a {
-                color: purple;
-                font-weight: 600;
+                color: lightgrey;
+                font-weight: 300;
             }
         </style>
     </head>
