updated code with fans

--- a/WingMate_iOS/Utilities/tou.html
+++ b/WingMate_iOS/Utilities/tou.html
@@ -7,9 +7,10 @@
                 font-family: "OpenSans-Regular", sans-serif;
                 font-size: 18px;
                 padding: 15px 15px;
+                color : #4A3D60
             }
             a {
-                color: lightgrey;
+                color: blue;
                 font-weight: 300;
             }
         </style>
@@ -125,7 +126,7 @@
         <li> No group photos or videos, only you!
         <li> At least one photo is mandatory for the registration process and maximum of 3 photos can be uploaded on a BLINQUI account.
         <li> Photos and videos that violate these Terms will not be accepted. User registration can only be completed with a minimum of one photo and one video which meet the requirements of these Terms.
-        <li> The maximum length of the video shall be twenty (20) seconds. You must mention "BLINQUI" in your video so we can confirm it’s you. For example "Hi BLINQUI, this is John Doe”
+        <li> The maximum length of the video shall be twenty (20) seconds. You must mention "BLINQUI" in your video so we can confirm it's you. For example "Hi BLINQUI, this is John Doe"
 
         Do not be afraid to be creative, have fun with BLINQUI!
         
