--- a/WingMate_iOS/Utilities/privacyPolicy.html
+++ b/WingMate_iOS/Utilities/privacyPolicy.html
@@ -7,9 +7,10 @@
                 font-family: "OpenSans-Regular", sans-serif;
                 font-size: 18px;
                 padding: 15px 15px;
+                color : #4A3D60
             }
             a {
-                color: lightgrey;
+                color: blue;
                 font-weight: 300;
             }
         </style>
